--- a/client/src/components/TrellisGrid.css
+++ b/client/src/components/TrellisGrid.css
@@ -1,52 +1,41 @@
-/* --- Grid Container --- */
-.grid-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgba(25, 25, 25, 0.95);
-    border-radius: 12px;
-    border: 1px solid black;
-
-    height: 100%;
-    width: auto;
-    aspect-ratio: 1 / 1;
-
-    max-height: 500px;
-    max-width: 500px;
-
-    margin: 0 auto;
-    padding: 20px;
-    box-sizing: border-box;
-    flex-shrink: 1;
-}
-
-/* --- Grid Viewport --- */
 .grid-viewport {
     display: grid !important;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    gap: 12px;
+
+    gap: 10px;
 
     width: 100%;
     height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    aspect-ratio: 1 / 1;
-    margin: 0 auto;
 
+    aspect-ratio: 1 / 1;
+
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
-/* --- The Pads --- */
+.grid-container{
+    border: 2px solid black;
+    padding: 1em;
+    border-radius: 8px;
+    background: var(--primary-light);
+}
+
 .pad {
     width: 100%;
-    aspect-ratio: 1 / 1;
+    height: 100%;
+    display: block;
 
     border: 1px solid rgba(50, 50, 50, 0.95);
     border-radius: 4px;
     cursor: pointer;
     background-color: #222;
+
     box-sizing: border-box;
+
+    transition: transform 0.1s ease, background-color 0.2s ease;
 }
+
 
 .pad.active {
     background-color: #f5820a;
@@ -57,7 +46,7 @@
 .pad.playing {
     border: 1px solid rgba(245, 130, 10, 0.35);
     filter: brightness(1.2);
-    transform: scale(0.95);
+    transform: scale(0.94);
     z-index: 2;
     box-shadow: 0 0 2px rgba(241, 173, 54, 0.88);
 }
@@ -65,5 +54,4 @@
 .pad.active.playing {
     background-color: #ffb366;
     box-shadow: 0 0 12px #f5820a;
-
 }
